# casbin/polict_casbin.go
@@ -10,11 +10,11 @@ import (
 )
 
 const (
-	host     = "postgres3"
+	host     = "localhost"
 	port     = "5432"
 	dbname   = "casbin"
 	username = "postgres"
-	password = "1234"
+	password = "salom"
 )
 
 func CasbinEnforcer(logger *slog.Logger) (*casbin.Enforcer, error) {
@@ -52,37 +52,37 @@ func CasbinEnforcer(logger *slog.Logger) (*casbin.Enforcer, error) {
 	
 	policies := [][]string{
 		//user
-		{"admin", "api/user/getbyuser/:email", "GET"},
-		{"admin", "api/user/update_user", "PUT"},
-		{"admin", "api/user/delete_user/:id", "DELETE"},
+		{"admin", "/api/user/getbyuser/:email", "GET"},
+		{"admin", "/api/user/update_user", "PUT"},
+		{"admin", "/api/user/delete_user/:id", "DELETE"},
 
-		{"user", "api/user/getbyuser/:email", "GET"},
-		{"user", "api/user/update_user", "PUT"},
-		{"user", "api/user/delete_user/:id", "DELETE"},
+		{"user", "/api/user/getbyuser/:email", "GET"},
+		{"user", "/api/user/update_user", "PUT"},
+		{"user", "/api/user/delete_user/:id", "DELETE"},
 
 
 		// docs
-		{"admin", "api/docs/createDocument", "POST"},
-		{"admin", "api/docs/SearchDocument", "GET"},
-		{"admin", "api/docs/GetAllDocuments", "GET"},
-		{"admin", "api/docs/UpdateDocument", "PUT"},
-		{"admin", "api/docs/DeleteDocument", "DELETE"},
-		{"admin", "api/docs/ShareDocument", "POST"},
+		{"admin", "/api/docs/createDocument/:title", "POST"},
+		{"admin", "/api/docs/SearchDocument", "GET"},
+		{"admin", "/api/docs/GetAllDocuments", "GET"},
+		{"admin", "/api/docs/UpdateDocument", "PUT"},
+		{"admin", "/api/docs/DeleteDocument", "DELETE"},
+		{"admin", "/api/docs/ShareDocument", "POST"},
 
-		{"user", "api/docs/createDocument", "POST"},
-		{"user", "api/docs/SearchDocument", "GET"},
-		{"user", "api/docs/GetAllDocuments", "GET"},
-		{"user", "api/docs/UpdateDocument", "PUT"},
-		{"user", "api/docs/DeleteDocument", "DELETE"},
-		{"user", "api/docs/ShareDocument", "POST"},
+		{"user", "/api/docs/createDocument/:title", "POST"},
+		{"user", "/api/docs/SearchDocument", "GET"},
+		{"user", "/api/docs/GetAllDocuments", "GET"},
+		{"user", "/api/docs/UpdateDocument", "PUT"},
+		{"user", "/api/docs/DeleteDocument", "DELETE"},
+		{"user", "/api/docs/ShareDocument", "POST"},
 
 
 		// version
-		{"admin", "api/version/GetAllVersions", "GET"},
-		{"admin", "api/version/RestoreVersion", "PUT"},
+		{"admin", "/api/version/GetAllVersions", "GET"},
+		{"admin", "/api/version/RestoreVersion", "PUT"},
 
-		{"user", "api/version/GetAllVersions", "GET"},
-		{"user", "api/version/RestoreVersion", "PUT"},
+		{"user", "/api/version/GetAllVersions", "GET"},
+		{"user", "/api/version/RestoreVersion", "PUT"},
 		
 	}
 
